test/statements/sungeun/bad_break.good
bad_break.chpl:29: error: bad label 'l3' on break or continue
bad_break.chpl:32: error: bad label 'l2' on break or continue
bad_break.chpl:37: error: bad label 'l1' on break or continue
